# Clivatti_Advogados_Blog

./: .env  .gitignore  db.sqlite3  pyproject.toml  requirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_created_at_postcategory_created_at.py  0003_alter_post_created_at_alter_postcategory_created_at.py
blog/static/blog/css/: blog.css  post.css
blog/templates/blog/: blog.html  post.html
blog/templates/blog/partials/: _sidenav.html
core/: settings.py  urls.py
landing/: views.py
landing/static/landing/css/: home.css
landing/templates/landing/: home.html
static/css/: base.css  variables.css
templates/: base.html
templates/partials/: _footer.html  _header.html
